[project]
name = "robbotframework-dosomething"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Biehl", email = "dbiehl@live.de" }
]
requires-python = ">=3.13"
dependencies = [
    "robotframework>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dosomething"]
