[project]
name = "robbotframework-dosomething"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Biehl", email = "dbiehl@live.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Robot Framework :: Library"
]
requires-python = ">=3.13"
dependencies = [
    "robotframework>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dosomething"]

[dependency-groups]
dev = [
    "robotframework-tidy>=4.16.0",
]
